# flatremote

./: CMakeLists.txt  LICENSE  README.md  com.github.Flatremote.yml  main.cpp  org.flatpak.Flatremote.yml
.github/workflows/: cmake-multi-platform.yml  flatpack.yml
